[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "asyncpg>=0.30.0",
    "discord[voice]>=2.3.2",
    "fastapi[standard]>=0.118.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pynacl>=1.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.25",
    "valkey>=6.1.1",
]
