[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.119.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib==1.7.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "valkey>=6.1.1",
]
